    significantly reducing the amount of clutter in typical backtraces.
  * improved the startup banner.  (thanks to Brian Mastenbrook and
    Teemu Kalvas)
  * optimization: REPLACE on declared (UNSIGNED-BYTE 8) vectors, as well
    as other specialized array types, is much faster.  SUBSEQ and
    COPY-SEQ on such arrays have also been sped up.
  * fixed inference of the upper bound of an iteration variable.
    (reported by Rajat Datta).
  * fixed bug 376: CONJUGATE type deriver.
  * fixed infinite looping of ALIEN-FUNCALL, compiled with high DEBUG.
    (reported by Baughn on #lisp)
  * fixed some bugs related to Unicode integration:
    ** the restarts for recovering from input and output encoding
       errors only appear when there is in fact such an error to
       handle.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** MISC.549 and similar: late transformation of unsafe type
       assertions into derived types caused unexpected code
       transformations.
    ** SCALE-FLOAT type deriver is less wrong.
    ** type derivers for EXP, LOG and similar functions compute result
       types for complex arguments better.
    ** (MISC.563) CONJUGATE type deriver works for very restricted
       complex types.
    ** out-of-line type testers for character strings are available.
    ** EQUAL compiler transform understands specialness of objects
       of type BIT-VECTOR.
    ** accessing double-floats stored on the stack now works on x86-64.
    ** debugger internals could sometimes create invalid lispobjs, 
       resulting in GC crashes.

changes in sbcl-0.8.21 (0.9alpha.1?) relative to sbcl-0.8.20:
  * incompatible change: thread support for non-NPTL systems has
    been removed - locking is buggy and unreliable.  A threaded 
    SBCL build will now warn at startup and refuse to create
    new threads, unless futex support is detected in the kernel
  * incompatible change: the top level REPL now has only an ABORT